Fix sticky position on tablet

--- a/packages/ui/src/components/Layout/LayoutPage.sass
+++ b/packages/ui/src/components/Layout/LayoutPage.sass
@@ -19,8 +19,6 @@
 		display: flex
 		flex-direction: row
 		flex: 1
-		overflow-x: auto
-		overflow-y: visible
 		padding-top: var(--cui-layout-page-padding-top)
 		padding-left: var(--cui-layout-page-padding-left)
 		padding-right: var(--cui-layout-page-padding-right)
